"Align rotation with the snapping target" and "project individual elements" don't work together #40958

Closed
opened 2014-07-05 15:57:17 +02:00 by Piotr Adamowicz · 8 comments

System Information
Win7 64bit, GF 780

Blender Version
Broken: 81c3fc9
Worked: ?

Short description of error

The Object mode snapping options "Align rotation with the snapping target" and "Project individual elements" don't work together. Trying to use both at the same time results in objects being projected to the surface of the target object, but not rotated according with the surface/vertex/edge normal.

In this case one would expect each object to be aligned with the normal of the element at the projection point.

Exact steps for others to reproduce the error

  1. Open attached file.
  2. Grab both suzannes and drag over the sphere. Observe them not being aligned to the surface.

align-to-target.blend

**System Information** Win7 64bit, GF 780 **Blender Version** Broken: 81c3fc9 Worked: ? **Short description of error** The Object mode snapping options "Align rotation with the snapping target" and "Project individual elements" don't work together. Trying to use both at the same time results in objects being projected to the surface of the target object, but not rotated according with the surface/vertex/edge normal. In this case one would expect each object to be aligned with the normal of the element at the projection point. **Exact steps for others to reproduce the error** 1. Open attached file. 2. Grab both suzannes and drag over the sphere. Observe them not being aligned to the surface. [align-to-target.blend](https://archive.blender.org/developer/F96786/align-to-target.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MadMinstrel

Added subscriber: @MadMinstrel
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-07-14 09:19:47 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

It might be just not implemented.. @Psy-Fi, you've been familiar with this code last weeks, mind having a look? Thanks!

It might be just not implemented.. @Psy-Fi, you've been familiar with this code last weeks, mind having a look? Thanks!
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

This issue was referenced by 4f18ab1b20

This issue was referenced by 4f18ab1b20d497da5ea4b613b9ab9e9bc57d3761

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4f18ab1b20.

Closed by commit 4f18ab1b20.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40958
No description provided.